# GEEC

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.rst  LICENSE  Makefile  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: main.yml
data/: cube.csv
docs/: build.md  index.md  install.md  modules.md  usage.md
geec/: __init__.py  __main__.py  api.py  cli.py  config.py  crs.py  dataset.py  edge.py  face.py  mass.py  observer.py  polyhedron.py  station.py  timing.py  topo.py  utils.py
geec/cfg/: config_default.yaml  config_template.yaml  config_test.yaml  config_test_cube.yaml  config_test_topo.yaml
geec/data/: dem0.csv
geec/data/geoids/: readme
install/: index.html
modules/: index.html
perfplot/: concat.py  demo.py  demo2.py  func_list.py  sum.py
profiling/: decorator.py  exemple_timeit.py  line_profiling.py  readme  test_grad.py  test_grav.py  timeit.py
profiling/perfplot/: add_assign.py  body_to_lon.py  concat.py  cross.py  demo.py  demo2.py  diag.py  fillarray.py  func_list.py  norm.py  sum.py
search/: search_index.json
tests/: conftest.py  no_test_station.py  test_body.py  test_crs.py  test_edge.py  test_face.py  test_foo.py  test_geec.py  test_mass.py  test_polyhedron.py  test_station.py  test_timeit.py
usage/: index.html
